# ncorpos-utilidades-py

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  test_basico.py
.github/workflows/: pypi.yml
src/ncorpos_utilidades/: __init__.py  api.py
src/ncorpos_utilidades/ext/: ncorpos_utilidades.f90
tests/: test_import.py  teste.py
tools/: gerar_readme_api.py  readme_base.md
