[build-system]
requires = [
  "scikit-build-core>=0.9",
  "numpy",
  "meson",
  "ninja",
  "wheel",
  "meson-python"
]
build-backend = "scikit_build_core.build"

[project]
name = "ncorpos-utilidades-py"
version = "0.1.1"
description = "Utilidades via Fortran"
authors = [{ name = "potalej" }]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = ["numpy"]

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
wheel.packages = ["ncorpos_utilidades"]

