[build-system]
requires = [
  "scikit-build-core>=0.9",
  "numpy",
  "meson",
  "ninja",
  "wheel",
]
build-backend = "scikit_build_core.build"

[project]
name = "ncorpos-utilidades-py"
version = "0.2.1"
description = "Utilidades via Fortran"
authors = [{ name = "potalej" }]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = ["numpy"]

[tool.scikit-build]
wheel.packages = ["ncorpos_utilidades"]
cmake.args = [
  "-G", "MinGW Makefiles",
  "-DCMAKE_C_COMPILER=gcc",
  "-DCMAKE_CXX_COMPILER=g++", 
  "-DCMAKE_Fortran_COMPILER=gfortran",
  "-DCMAKE_MAKE_PROGRAM=ninja"
]

[tool.scikit-build.sdist]
include = [
  "CMakeLists.txt",
  "src/ncorpos_utilidades/**"
]