[build-system]
requires = [
  "scikit-build-core>=0.9",
  "numpy",
  "meson",
  "ninja",
  "wheel",
  "meson-python"
]
build-backend = "scikit_build_core.build"

[project]
name = "ncorpos-utilidades-py"
version = "1.0.1"
description = "Utilidades para problemas de N-corpos via Fortran."
authors = [{ name = "potalej" }]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = ["numpy"]

[tool.scikit-build]
wheel.packages = ["ncorpos_utilidades"]

[tool.scikit-build.sdist]
include = [
  "CMakeLists.txt",
  "src/ncorpos_utilidades/**"
]